--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 
         <div class="navigation">
 
-            <div class="logo"><a href="index.html">CanvasofWeb</a></div>
+            <div class="logo"><a href="index.html">Swagata</a></div>
 
             <div class="nav">
                 <div class="leptop-nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="sarvice.html">Services</a></li>
-                      
-                        <li><a href="FAQ.html">FAQ</a></li>
+                        <li><a href="index.html">Our product</a></li>
+                        <li><a href="about.html">Why Swagata </a></li>
+                        <li><a href="sarvice.html">Stady case</a></li>
+                         <li><a href="FAQ.html">About Us</a></li>
+                        <li><a href="FAQ.html">Contact Us</a></li>
                         
                     </ul>
                 </div>
